--- a/Anytime.Mailbox.Shared.Navigation/wwwroot/index.html
+++ b/Anytime.Mailbox.Shared.Navigation/wwwroot/index.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="js/navigation.js"></script>
+    <script src="js/navigation-v2.js"></script>
 
     <script>
         const model = {
@@ -102,27 +102,7 @@
             ]
         }
 
-        loadNavigationBar('#nav_placeholder', model);
-
-        //document.querySelectorAll('.sidebar .nav-item').forEach(item => {
-        //    item.addEventListener('click', function () {
-        //        const menuName = this.getAttribute('data-menu');
-
-        //        document.querySelector('.submenu-panel').classList.add('open');
-
-        //        document.querySelectorAll('.submenu').forEach(sm => sm.classList.remove('active'));
-
-        //        document.querySelector(`#menu-${menuName}`).classList.add('active');
-        //    });
-        //});
-
-        //document.addEventListener('click', function (e) {
-        //    if (!e.target.closest('.sidebar') && !e.target.closest('.submenu-panel')) {
-        //        document.querySelector('.submenu-panel').classList.remove('open');
-        //        document.querySelectorAll('.submenu').forEach(sm => sm.classList.remove('active'));
-        //    }
-        //});
-
+        RenderNavigation();
     </script>
 </body>
 </html>
